# agent-undo

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  LAUNCH.md  LAUNCH_DRAFTS.md  LICENSE  PHILOSOPHY.md  README.md  RESEARCH.md  USE_CASES.md  VILLAIN.md
.github/workflows/: ci.yml  release.yml  smoke.yml
blog/: the-shift.md
homebrew/: agent-undo.rb
paper/: README.md  bibliography.bib  main.tex
paper/eval/: README.md  render_figure.py  results.json  results.md  results_repo_snapshot.json  results_repo_snapshot.md  run.sh  run_repo_snapshot.sh
scripts/: ci-smoke.sh  install.sh
src/: blame.rs  config.rs  daemon.rs  hook.rs  install.rs  ipc.rs  main.rs  paths.rs  restore.rs  session.rs  store.rs  tui.rs  wrappers.rs
tests/: integration.rs
www/: .gitignore  OG_IMAGE_SPEC.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
www/public/: _redirects  install.sh  llms.txt  robots.txt
www/src/: content.config.ts
www/src/components/: DockNav.tsx  Footer.astro  Header.astro  ProgressiveBlur.astro
www/src/components/site/: Commands.astro  FAQ.astro  FinalCTA.astro  Hero.astro  HeroTerminal.astro  HowItWorks.astro  Install.astro  PaperTeaser.astro  Principle.astro  Shift.astro  Villain.astro
www/src/components/ui/: CopyButton.astro  PageIntro.astro  PullQuote.astro  SectionHeader.astro
www/src/content/blog/: the-shift.md
www/src/layouts/: Layout.astro
www/src/pages/: demos.astro  docs.astro  index.astro  paper.astro
www/src/pages/blog/: [slug].astro  index.astro
www/src/styles/: global.css
