[package]
name = "agent-undo"
version = "0.0.1"
edition = "2021"
description = "Ctrl-Z for AI coding agents. Snapshots every file write, attributes to agents, one-command rollback."
license = "MIT OR Apache-2.0"
repository = "https://github.com/peaktwilight/agent-undo"
homepage = "https://agent-undo.com"
readme = "README.md"
keywords = ["ai", "agent", "undo", "rollback", "snapshot"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
# Short binary name for daily use, like ripgrep installs `rg`.
# Cargo crate stays `agent-undo` for SEO + panic-search + LLM discoverability;
# the typed command is `au`.
name = "au"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# filesystem watching
notify = "6"
notify-debouncer-full = "0.3"

# hashing & compression
blake3 = "1"
zstd = "0.13"

# storage
rusqlite = { version = "0.31", features = ["bundled"] }

# cli & config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# tui
ratatui = "0.26"
crossterm = "0.27"

# filesystem & path handling
ignore = "0.4"           # ripgrep's gitignore handling
dirs = "5"
walkdir = "2"

# process introspection
sysinfo = "0.30"

# error handling
anyhow = "1"
thiserror = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# diff rendering
similar = "2"

# interactive prompts
dialoguer = { version = "0.11", default-features = false }

# misc
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
